db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: app-database
  ports:
  - port: 3306
    targetPort: 3306
